# iconet-Foundation-funkwhale

./: .codespellignore  .editorconfig  .env.dev  .gitignore  .gitlab-ci.yml  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  README.rst  TRANSLATORS.rst  dev.yml  pyproject.toml
api/: .coveragerc  .dockerignore  Dockerfile  Makefile  Readme.md  install_os_dependencies.sh  manage.py  operations.json  pyproject.toml  schema.yml  setup.cfg
api/compose/django/: entrypoint.sh  server.sh
api/config/: __init__.py  api_urls.py  plugins.py  routing.py  schema.py
api/config/settings/: common.py  local.py  production.py  testing.py
api/config/urls/: __init__.py  api.py  api_v2.py  spa.py  subsonic.py
api/funkwhale_api/: __init__.py  factories.py  main.py  schema.py
api/funkwhale_api/activity/: apps.py  utils.py  views.py
api/funkwhale_api/audio/: factories.py  filters.py  models.py  renderers.py  serializers.py  spa_views.py  tasks.py  views.py
api/funkwhale_api/cli/: base.py  library.py  main.py  media.py  plugins.py  users.py
api/funkwhale_api/common/: admin.py  apps.py  authentication.py  decorators.py  factories.py  fields.py  filters.py  middleware.py  mixins.py  models.py  mutations.py  permissions.py  preferences.py  search.py  serializers.py  storage.py  tasks.py  throttling.py  utils.py  validators.py  views.py
api/funkwhale_api/favorites/: factories.py  models.py  serializers.py  views.py
api/funkwhale_api/federation/: activity.py  actors.py  admin.py  api_serializers.py  api_views.py  authentication.py  contexts.py  decorators.py  factories.py  fields.py  jsonld.py  keys.py  library.py  models.py  mrf_policies.py  routes.py  serializers.py  signing.py  spa_views.py  tasks.py  utils.py  views.py  webfinger.py
api/funkwhale_api/history/: factories.py  models.py  serializers.py  views.py
api/funkwhale_api/instance/: dynamic_preferences_registry.py  nodeinfo.py  serializers.py  urls.py  views.py
api/funkwhale_api/manage/: filters.py  serializers.py  urls.py  views.py
api/funkwhale_api/moderation/: dynamic_preferences_registry.py  factories.py  filters.py  models.py  mrf_policies.py  serializers.py  tasks.py  utils.py  views.py
api/funkwhale_api/music/: factories.py  filters.py  importers.py  licenses.py  metadata.py  models.py  mutations.py  serializers.py  spa_views.py  tasks.py  utils.py  views.py
api/funkwhale_api/musicbrainz/: client.py  urls.py
api/funkwhale_api/playlists/: factories.py  models.py  serializers.py  views.py
api/funkwhale_api/radios/: factories.py  filters.py  filtersets.py  models.py  radios.py  views.py
api/funkwhale_api/subsonic/: authentication.py  renderers.py  serializers.py  views.py
api/funkwhale_api/tags/: factories.py  filters.py  models.py  serializers.py  tasks.py  views.py
api/funkwhale_api/taskapp/: celery.py
api/funkwhale_api/users/: admin.py  api_urls.py  auth_backends.py  authentication.py  factories.py  models.py  mutations.py  rest_auth_urls.py  serializers.py  views.py
api/requirements/: base.txt  local.txt  test.txt
api/tests/: conftest.py  test_auth.py  test_import_audio_file.py  test_init.py  test_urls.py  utils.py
api/tests/audio/: test_filters.py  test_models.py  test_serializers.py  test_spa_views.py  test_views.py
api/tests/channels/: test_consumers.py
api/tests/cli/: test_main.py
api/tests/common/: test_authentication.py  test_commands.py  test_decorators.py  test_fields.py  test_filters.py  test_middleware.py  test_models.py  test_mutations.py  test_preferences.py  test_routers.py  test_scripts.py  test_search.py  test_serializers.py  test_tasks.py  test_throttling.py  test_utils.py  test_views.py
api/tests/data/: youtube.py
api/tests/favorites/: test_activity.py  test_favorites.py  test_filters.py  test_serializers.py  test_views.py
api/tests/federation/: test_activity.py  test_api_filters.py  test_api_serializers.py  test_api_views.py  test_authentication.py  test_decorators.py  test_jsonld.py  test_models.py  test_routes.py  test_serializers.py  test_signing.py  test_spa_views.py  test_tasks.py  test_third_party_activitypub.py  test_utils.py  test_views.py  test_webfinger.py
api/tests/history/: test_activity.py  test_filters.py  test_views.py
api/tests/instance/: test_nodeinfo.py  test_stats.py  test_views.py
api/tests/loadtesting/: library.py
api/tests/manage/: test_views.py
api/tests/moderation/: test_mrf_policies.py  test_preferences.py  test_serializers.py  test_tasks.py
api/tests/music/: conftest.py  licenses.json  test_activity.py  test_commands.py  test_filters.py  test_import.py  test_licenses.py  test_metadata.py  test_models.py  test_music.py  test_mutations.py  test_serializers.py  test_spa_views.py  test_tasks.py  test_triggers.py  test_utils.py  test_views.py
api/tests/playlists/: test_filters.py  test_serializers.py  test_views.py
docs/: .gitignore  Dockerfile  Makefile  build_docs.sh  build_swagger.sh  conf.py  get-releases-json.py  glossary.md  i18n_generate.sh  index.md  index.rst  pyproject.toml  redirects.txt  serve.py  swagger.yml
docs/_templates/: layout.html  versions.html
docs/admin/: backup.rst  configuration.rst  external-storages.rst  importing-music.rst  index.rst  ldap.rst  migration.rst  mrf.rst  troubleshooting.rst  uninstall.rst  upgrading.rst  url.rst
docs/administrator_documentation/: index.md
docs/api/: definitions.yml  parameters.yml  properties.yml
docs/contributor_documentation/: documentation.md  index.md  translation.md
docs/developer_documentation/: architecture.md  index.md
docs/developers/: architecture.rst  authentication.rst  debugging.rst  index.rst  plugins.rst  subsonic.rst
docs/documentation/: identifying.rst
docs/installation/: debian.rst  docker.rst  index.rst  non_amd64_architectures.rst
docs/moderator/: reports.rst
docs/moderator_documentation/: index.md
docs/user_documentation/: index.md
docs/users/: account.rst  builtinplugins.rst  cli.rst  create.rst  index.rst  radios.rst  reports.rst  troubleshooting.rst  upload.rst
(+1545 files in other folders)
