[tool.poetry]
name = "Funkwhale"
version = "1.2.6"
description = ""
authors = ["Funkwhale Collective"]
license = "GNU AGPLv3"

[tool.poetry.dependencies]
python = "^3.7"
Django = "==3.2.16"
django-environ = "==0.9.0"
Pillow = "==9.3.0"
django-allauth = "==0.42.0"
psycopg2 = "==2.9.5"
pytz = "==2022.6"
django-redis = "==5.2.0"
redis = "==4.3.4"
kombu = "==5.2.4"
celery = "==5.2.7"
django-cors-headers = "==3.13.0"
musicbrainzngs = "==0.7.1"
djangorestframework = "==3.14.0"
arrow = "==1.2.3"
persisting-theory = "==1.0"
django-versatileimagefield = "==2.2"
django-filter = "==22.1"
mutagen = "==1.46.0"
django-dynamic-preferences = "==1.14.0"
python-magic = "==0.4.27"
channels = {extras = ["daphne"], version = "==4.0.0"}
channels-redis = "==4.0.0"
gunicorn = "==20.1.0"
cryptography = "==37.0.4"
django-cleanup = "==6.0.0"
requests = "==2.28.1"
pyOpenSSL = "21.0.0"
pydub = "==0.25.1"
PyLD = "==2.0.3"
aiohttp = "==3.8.3"
django-oauth-toolkit = "2.2.0"
django-storages = "==1.13.1"
boto3 = "==1.26.4"
unicode-slugify = "==0.1.5"
django-cacheops = "==6.1"
service-identity = "==21.1.0"
click = "==8.1.3"
Markdown = "==3.4.1"
bleach = "==5.0.1"
feedparser = "==6.0.10"
watchdog = "==2.1.9"
asgiref = "==3.5.2" #1516
ipython = "==7.34.0"
python-ldap = "==3.4.3"
django-auth-ldap = "==4.1.0"
uvicorn = {version = "==0.19.0", extras = ["standard"]}
django-cache-memoize = "0.1.10"
requests-http-message-signatures = "==0.3.1"
drf-spectacular = "==0.24.2"
sentry-sdk = "==1.10.1"
pluralizer = "==1.2.0"
importlib_metadata = {version = "==4.13.0", python = "<=3.7"} # Keep support python 3.7, can be removed if we drop support
dj-rest-auth = {extras = ["with_social"], version = "2.2.5"}

[tool.poetry.dev-dependencies]
flake8 = "==3.9.2"
pytest = "==7.2.0"
pytest-cov = "==4.0.0"
pytest-django = "==4.5.2"
pytest-env = "==0.8.1"
pytest-mock = "==3.10.0"
pytest-randomly = "==3.12.0"
pytest-sugar = "==0.9.6"
pytest-asyncio = "==0.20.1"
requests-mock = "==1.10.0"
Faker = "==15.3.1"
coverage = "==6.5.0"
django-coverage-plugin = "==2.0.4"
factory-boy = "==3.2.1"
django-debug-toolbar = "==3.7.0"
asynctest = "==0.13.0"
aioresponses = "==0.7.3"
prompt-toolkit = "==3.0.32"
black = "==22.10.0"
ipdb = "==0.13.9"
debugpy = "==1.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
