[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Funkwhale Collective <contact@funkwhale.audio>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "4.4.0"
sphinx-rtd-theme = "1.0.0"
django-environ = "0.8.1"
Django = "4.0.3"
myst-parser = "0.17.0"
sphinx-panels = "0.6.0"
sphinx-multiversion = "0.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
