[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Funkwhale Collective <contact@funkwhale.audio>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "==5.3.0"
sphinx-rtd-theme = "==1.1.1"
django-environ = "==0.9.0"
myst-parser = "==0.18.1"
Django = "==4.1.3"
sphinx-multiversion = "0.2.4"
sphinx-intl = "2.0.1"
sphinx_design = "==0.3.0"
sphinxcontrib-mermaid = "0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
